# KRTI_2023

./: README.md
drone_run/: CMakeLists.txt  package.xml
drone_run/launch/: auto.launch
drone_run/src/: keyboard_node.py  play_node.py
mavros/libmavconn/include/mavconn/: mavlink_dialect.h
mavros/mavros/launch/: apm.launch  node.launch  px4.launch
mavros/mavros/src/: test_node.py
object_detection_2d/src/: object_filter.cpp
realsense-ros/realsense2_camera/launch/: rs_rgbd.launch
tfmini_ros_tiers/: CMakeLists.txt  package.xml
tfmini_ros_tiers/launch/: tfmini.launch
tfmini_ros_tiers/src/: TFmini_ros_node.cpp  tfmini_bikin.py  tfmini_bikin1.py
vision_to_mavros/: .gitignore
vision_to_mavros/launch/: t265_all_nodes.launch  t265_tf_to_mavros.launch
vision_to_mavros/scripts/: channel_val.txt  mavros_control1.py  run copy.py  run.py  run2.py  run3.py
